--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "boxen": "^8.0.1",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "handlebars": "^4.7.8",
