feat: Update getGroqUpdate function to use LlmUpdate and add support for OpenAI API
- Updated the getGroqUpdate function in the update_file.js file to use the new LlmUpdate function instead.
- Added support for the OpenAI API by checking for the presence of the OPEN_AI_API_KEY environment variable.
- Updated the API endpoint and model parameters in the getLlmUpdate function to match the new OpenAI API.

Closes #123

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "skriptor",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
+  "description": "Skirptor CLI is a flexible and extensible command-line tool designed to automate project setup processes. It uses YAML configurations to define setup steps, making it easy to create and share project templates across your team or the community.",
   "main": "index.js",
+  "private": true,
   "bin": {
     "skriptor": "./index.js"
   },
