chore: Update package.json bin path for skriptor command

--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.2",
   "description": "Skirptor CLI is a flexible and extensible command-line tool designed to automate project setup processes. It uses YAML configurations to define setup steps, making it easy to create and share project templates across your team or the community.",
   "main": "index.js",
-  "private": true,
   "bin": {
-    "skriptor": "./index.js"
+    "skriptor": "index.js"
   },
   "scripts": {
     "start": "node index.js"
